--- a/app/views/study_groups/allgroups.html.erb
+++ b/app/views/study_groups/allgroups.html.erb
@@ -38,8 +38,8 @@
          <%= form_tag(joinGroup_path(email: i.email), method: :post) do %> <!-- params[:name] is for the tutor's email I just have too much to do rn to change the attribute name -->
          <div><p></p></div>
           <h4 class="findatutor_heading">Join group: </h4>
-          <input type="text" name="email" id="email" placeholder="Enter your email" class = "form-control"><br>
-          <input type="text" name="name" id="name" placeholder="Your name"  class = "form-control"><br> 
+          <input autocomplete="off" type="text" name="email" id="email" placeholder="Enter your email" class = "form-control"><br>
+          <input autocomplete="off" type="text" name="name" id="name" placeholder="Your name"  class = "form-control"><br> 
           <input type="submit" name="commit" value="Send" data-disable-with="Send" id="specialanimatedbutton">
           <% end %>
       </div>
