--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1185,10 +1185,20 @@ ul.tutors li img{
 }
 .profile{
 	position: absolute;
-	bottom: 5%;
+	bottom: 7%;
 	left: 50%;
 	transform: translateX(-50%);
 	text-align: center;
+}
+.logout{
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	font-size: 50px;
+}
+.logout a{
+	font-size: 25px;
 }
 /////
 
