--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,16 +15,16 @@
 
 			<li class="item profile">
 			
-				 <% if Person.find_by(id: session[:tutor_id]) %>
+				<% if Person.find_by(id: session[:tutor_id]) %>
 				 		<i class="fa fa-user"></i>
 						<% if Person.find_by(id: session[:tutor_id]).admin? %>
-              <a href="/adminPage">Profile</a>
-            <% else %>
-                <%= link_to "Profile", person_path(Person.find_by(id: session[:tutor_id])) %></li>
-            <% end %>
-            <li class="divider"></li>
-            <li class = "item">
-             <%= link_to "Log out", logout_path, method: :delete %>
+              				<a href="/adminPage">Profile</a>
+           				<% else %>
+                			<%= link_to "Profile", person_path(Person.find_by(id: session[:tutor_id])) %></li>
+           				<% end %>
+            		<li class="divider"></li>
+           			<li class = "item logout">
+             		<%= link_to "Log out", logout_path, method: :delete %>
 				<% else %>
 				<% end %>
 			</li>
