--- a/app/views/people/_person.html.erb
+++ b/app/views/people/_person.html.erb
@@ -1,4 +1,4 @@
-<li>
+<li style="background-color: rgb(255,255,255,0.8); ">
   <%= gravatar_for person, size: 50 %>
   <%= link_to person.name, person %>
   
