Added accepted feature to tutor requests

--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -4,7 +4,7 @@
   	<script type="text/javascript" src="js/bootstrap.min.js"></script>
   	
 </head>
-<body id="not_taken" style="font-family: Signika">
+<body id="not_taken" style="font-family: Signika; background-color: black;">
   <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
@@ -87,7 +87,7 @@
             </tr>
             
               <% Subject.all.each do |i| %>
-                <% if ((i.creatorid == session[:tutor_id]) && (i.deletedSubject==false)) %>
+                <% if (i.creatorid == session[:tutor_id]) %>
                  
                   <table style="width:150%" id="VisualSubjects">   <!-- NOTE: I'm creating a new table here instead of adding a row because for some reason it won't add a row to the existing table and display the name, date, and rate outside the table -->
                     <tr>
@@ -131,18 +131,19 @@
         <h1>
         <div id="bob">
           <p style = "color:#fff; font-size: 2vw">Requests</p>
-        <table style="width:160%" id="VisualTable"> 
+        <table style="width:460%" id="VisualTable"> 
             <tr>
               <th class="requestname" style="width:16.1%", "position:absolute">Student name</th>
               <th class="requestemail" style="width:25%", "position:absolute">Email</th> 
               <th class="requestsubject" style="width:20%", "position:absolute">Subject</th> 
               <th class="requestday" style="width:20%", "position:absolute">Day</th> 
               <th class="requestday" style="width:20%", "position:absolute">Asked on</th> 
-              <th class="requestday" style="width:20%", "position:absolute">Options</th> 
+              <th class="requestday" style="width:10%", "position:absolute">Options</th> 
+               <th class="requestday" style="width:10%", "position:absolute">Did you meet?</th> 
             </tr>
             
               <% TutorRequest.all.each do |i| %>
-                <% if (i.name == Person.find_by(id: session[:tutor_id]).email) && !i.invisible %>
+                <% if (i.name == Person.find_by(id: session[:tutor_id]).email)%>
                  
                   <table style="width:160%" id="VisualSubjects">   <!-- NOTE: I'm creating a new table here instead of adding a row because for some reason it won't add a row to the existing table and display the name, date, and rate outside the table -->
                     <tr>
@@ -151,8 +152,9 @@
                       <th class="requestsubject" style="width:20%", "position:absolute"> <%= i.whichSubject %></th> 
                       <th class="requestday" style="width:20%", "position:absolute"> <%= i.time %></th> 
                       <th class="requestday" style="width:20%", "position:absolute"> <%= i.created_at.strftime("%m-%d-%y") %><br>(<%= i.created_at.in_time_zone('Pacific Time (US & Canada)').strftime("%I:%M %P") %>)</th> 
-                      <th class="tutoringoptions" class="delete" style="width: 20%", "position:absolute"><%= link_to " Delete", requestdelete_path(check: i.id), method: :delete,
+                      <th class="tutoringoptions" class="delete" style="width: 10%", "position:absolute"><%= link_to " Delete", requestdelete_path(check: i.id), method: :delete,
                                   data: { confirm: "Are you sure?" } %></th>
+                       <th class="tutoringoptions" style="width: 10%", "position:absolute"><%= check_box("Accepted", :accepted, {}, true, false) %></th>
                     </tr>
                     <%# session[:selected_subject_id] = i.id %>
                      
@@ -176,10 +178,11 @@
             <br>
             <!--replced your link_to with an a href-->
             
-           <!--<a data-confirm="Are you sure you want to delete your account?" rel="nofollow" data-method="delete" href="/people/4" style="font-size: 2vw" class="delete">Delete Account</a>   <!--instead of accountDelete_path just submit the current person DDDD accountDelete_path(id: Tutor.find_by(people_id: @person.id).id)-->   -->
-         
+           <!--<a data-confirm="Are you sure you want to delete your account?" rel="nofollow" data-method="delete" href="/people/4" style="font-size: 2vw" class="delete">Delete Account</a>   <!--instead of accountDelete_path just submit the current person DDDD accountDelete_path(id: Tutor.find_by(people_id: @person.id).id)--> 
+          <span id="delete_button_profile">
          <%= link_to " Delete", accountDelete_path(id: Tutor.find_by(people_id: @person.id).id), method: :delete,
                                   data: { confirm: "Are you sure?" } %>
+          </span>
          
           </h1>
       </section>
