--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -4,7 +4,7 @@
   	<script type="text/javascript" src="js/bootstrap.min.js"></script>
   	
 </head>
-<body id="not_taken" style="font-family: Signika">
+<body id="not_taken" style="font-family: Signika; background-color: black;">
   <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
@@ -139,6 +139,7 @@
               <th class="requestday" style="width:20%", "position:absolute">Day</th> 
               <th class="requestday" style="width:20%", "position:absolute">Asked on</th> 
               <th class="requestday" style="width:10%", "position:absolute">Options</th> 
+               <th class="requestday" style="width:10%", "position:absolute">Did you meet?</th> 
             </tr>
             
               <% TutorRequest.all.each do |i| %>
@@ -153,6 +154,7 @@
                       <th class="requestday" style="width:20%", "position:absolute"> <%= i.created_at.strftime("%m-%d-%y") %><br>(<%= i.created_at.in_time_zone('Pacific Time (US & Canada)').strftime("%I:%M %P") %>)</th> 
                       <th class="tutoringoptions" class="delete" style="width: 10%", "position:absolute"><%= link_to " Delete", requestdelete_path(check: i.id), method: :delete,
                                   data: { confirm: "Are you sure?" } %></th>
+                       <th class="tutoringoptions", style="width: 10%", "position:absolute"><%= check_box("Accepted", :accepted, {method: accepted_path}, true, false) %></th>
                     </tr>
                     <%# session[:selected_subject_id] = i.id %>
                      
