--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -5,56 +5,19 @@
   	<script src="jquery-3.3.1.min.js"></script>
   	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
-<body id="admintutors">
-<nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-      	<a class="nav-link" href="/about">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/help">Help</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/studygroup">Study Group</a>
-      </li>
-      
-      <!--<li class="nav-item">-->
-      <!--  <li><%= link_to "Tutor", 'tutors_path' %></li> -->
-      <!--</li>-->
-      <div class="dropdown">
-          <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Account
-          </button>
-        <ul class="dropdown-menu">
-           <% if Person.find_by(id: session[:tutor_id]).admin? %>
-              <li class = "dropdown-item"><%= link_to "Profile", adminPage_path %></li>
-            <% else %>
-              <li class = "dropdown-item"><%= link_to "Profile", person_path(Person.find_by(id: session[:tutor_id])) %></li>
-            <% end %>
-          <li class="divider"></li>
-          <li>
-            <%= link_to "Log out", logout_path, method: :delete %>
-          </li>
-        </ul>
-        </div>
-  </ul>
-  <a class="navbar-brand" href="/home">CV Enterprises</a>
-  </div>
-</nav>
+<body id="admintutors", style = "background-color: black;">
+	<%= render 'layouts/header' %>
 
 <center>
-<h1>All tutors</h1>
-
-<%= will_paginate %>
+<h1 style="color: white">All tutors</h1>
 
 <ul class="tutors">
+  
+<%= will_paginate %>
   <%= render @people %>
+  
+<%= will_paginate %>
 </ul>
 
-<%= will_paginate %>
 </center>
 </body>
