--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -578,7 +578,7 @@ aside.col-md-4{
 }
 #not_taken{
 	height: 100vh;
-	background-image: url("https://images.unsplash.com/photo-1460355976672-71c3f0a4bdac?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
+	background-image: url("https://images.pexels.com/photos/346529/pexels-photo-346529.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
 	background-size: cover;
 	// background-size: cover;
 	 //height:100%;
@@ -760,6 +760,7 @@ ul.tutors li img{
 	position: relative;
 	box-shadow: 10px 8px 8px rgba(8, 26, 128, 1);
 	margin-top: 40px;
+	border-radius: 20px;
 }
 .tutorgrade{
 	float: left;
@@ -1205,4 +1206,11 @@ ul.tutors li img{
 #delete_button_profile a:hover{
 	text-decoration: none;
 	color: #007bff;
+}
+a{
+	color: white;
+}
+#editprofile{
+	color: white;
+	text-decoration: underline;
 }
