--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -616,7 +616,8 @@ table, th, td {
 	padding: 10px;
 }
 #createsubjectlargecontent{
-	background-image: url("https://img1.akspic.com/image/114418-skyscraper-architect-modern_architecture-day-glass-1280x1024.jpg");
+	background-image: url("https://images.pexels.com/photos/374023/pexels-photo-374023.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+	background-position: bottom;
 }
 #createsubjecth1{
 	color: white;
