--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -80,7 +80,7 @@ button:focus{
 .large_content p{
 	color: white;
 	font-family: Signika;
-	font-size: 27px;
+	font-size: 1.40625vw;
 	max-width: 50%;
 	position: relative;
 	top: 0;
@@ -1149,9 +1149,9 @@ ul.tutors li img{
 	text-transform: uppercase;
 	color: rgba(235, 64, 52, 1);
 	font-weight: bold;
-	font-size: 50px;
+	font-size: 2.60417vw;
 	list-style: none;
-	margin-bottom: 50px;
+	margin-bottom: 2.60417vw;
 	position: relative;
 	display: inline-block;
 }
