--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -157,7 +157,8 @@
                       <th class="requestday" style="width:15%", "position:absolute"> <%= i.created_at.strftime("%m-%d-%y") %><br>(<%= i.created_at.in_time_zone('Pacific Time (US & Canada)').strftime("%I:%M %P") %>)</th> 
                       <th class="tutoringoptions" class="delete" style="width: 10%", "position:absolute"><%= link_to " Delete", requestdelete_path(check: i.id), method: :delete,
                                   data: { confirm: "Are you sure?" } %></th>
-                       <th class="tutoringoptions", style="width: 10%", "position:absolute"><%= check_box("Accepted", :accepted, {method: accepted_path}, true, false) %></th>
+                       <th class="tutoringoptions", style="width: 10%", "position:absolute"><%= link_to "Yes", accepted_path, data: { confirm: "Are you sure?" } %> | <%= link_to "No", accepted_path, data: { confirm: "Are you sure?" } %></th>
+              
                     </tr>
                     <%# session[:selected_subject_id] = i.id %>
                      
