Got rid of ended subjects

--- a/app/views/subject/findatutor.html.erb
+++ b/app/views/subject/findatutor.html.erb
@@ -27,21 +27,18 @@
    	       <select name="searchName" id="searchName">
    	          <option value="blank">Select</option>
    	          <option value="American Government">American Government</option>
-   	          <option value="American Literature">American Literature</option>
+   	          <option value="English 11">English 11</option>
    	          <option value="Biology">Biology</option>
    	          <option value="Chemistry">Chemistry</option>
-   	          <option value="Computer Science (buffet)">Computer Science (buffet)</option>
-   	          <option value="ELD Level 1-2">ELD Level 1-2</option>
-   	          <option value="ELD Level 3">ELD Level 3</option>
-   	          <option value="ELD Level 4">ELD Level 4</option>
-              <option value="ELD Level 5">ELD Level 5</option>
+   	          <option value="Applied Computer Programming (buffet)">Applied Computer Programming (buffet)</option>
+   	          <option value="ELD">ELD</option>
    	          <option value="Earth Space Science">Earth Space Science</option>  
    	          <option value="Economics">Economics</option>
    	          <option value="English 10 Honors">English 10 Honors</option>
    	          <option value="English 10">English 10</option>
    	          <option value="English 9 Advanced">English 9 Advanced</option>
    	          <option value="English 9">English 9</option>
-   	          <option value="English Literature">English Literature</option>
+   	          <option value="English 12">English 12</option>
    	          <option value="French 1-2">French 1-2</option>
               <option value="French 3-4">French 3-4</option>
               <option value="French 5-6">French 5-6</option>
@@ -51,7 +48,7 @@
               <option value="German 5-6 Honors">German 5-6 Honors</option>
               <option value="Health">Health</option>
    	          <option value="Human Geography">Human Geography</option>  
-   	          <option value="Int Math II Concepts">Int Math II Concepts</option>
+   	          
    	          <option value="Integrated Math I">Integrated Math I</option>
               <option value="Integrated Math II">Integrated Math II</option>
               <option value="Integrated Math II Accelerated">Integrated Math II Accelerated</option>
