--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -10,15 +10,20 @@
   		height: 120vh;
   	}
   }
+  @media screen and (max-width: 600px){
+  	.large_content{
+  		height: 130vh;
+  	}
+  }
 </style>
 </head>
 <body id="body">
 <%= render 'layouts/header' %>
 	<div class="large_content">
-		<div class="container" style="margin-top: -30px">
+		<div class="container">
 			<h1>Need help?</h1>
 			<p id="homep">Click on the 'Home' page to sign up (as a tutor or a tutee) and visit the 'About' page to read about our website.
-			              If you need additional help, please email <a target="_blank" style="color: #00BFFF;"href="https://mail.google.com/mail/?view=cm&fs=1&to=vikramchilkunda2003@gmail.com&su=Help - Tutor Matching&body=&bcc=">vikramchilkunda2003@gmail.com</a></p>		
+			              If you need additional help, please email <a target="_blank" style="color: #00BFFF;"href="https://mail.google.com/mail/?view=cm&fs=1&to=crescentavalleytutors@gmail.com&su=Help - Tutor Matching&body=&bcc=">crescentavalleytutors@gmail.com</a></p>		
 		</div>
  	<!-- <button id="top" onload ="hide()" onclick="topFunction()" >Top</button> -->
  	<div class="filler"></div>
