--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -80,7 +80,7 @@ button:focus{
 .large_content p{
 	color: white;
 	font-family: Signika;
-	font-size: 1.40625vw;
+	font-size: 27px;
 	max-width: 50%;
 	position: relative;
 	top: 0;
@@ -318,6 +318,10 @@ a:hover{
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
+    .sidenav{
+    	width: 100vw;
+    	height: 100vh;
+    }
     .nav-item:hover:before {
 	  visibility: hidden;
 	  -webkit-transform: scaleX(1);
@@ -382,6 +386,13 @@ center{
 	  -webkit-transform: scaleX(1);
 	  transform: scaleX(1);
 	}
+    .sidepopup{
+    	width: 100vw;
+    }
+    .side{
+    	width: 100vw;
+    	height: 100vh;
+    }
 }
 
 /* Users index */
@@ -431,7 +442,7 @@ center{
 		// background-image: none;
 	}
 	.col-md-6{
-		max-width: 80%!important;
+		max-width: 90%!important;
 	}
 	.nav-item:hover:before {
 	  visibility: hidden;
@@ -440,9 +451,7 @@ center{
 	}
 }
 @media screen and (max-width: 1370px){
-	// .large_content{
-		// height: 100vh;
-	// }
+
 	#body{
 		height: 120vh;
 	}
@@ -464,7 +473,7 @@ center{
 		width: 100vw;
 		padding-top: 0px;
 		padding-bottom: 50px;
-		background-image: url("https://images.pexels.com/photos/956981/milky-way-starry-sky-night-sky-star-956981.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+		background-image: url("https://images.pexels.com/photos/159752/pencil-office-design-creative-159752.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
 		// background-image: url("https://s3.envato.com/files/233994195/590x332.jpg");
 		background-repeat: no-repeat;
 		background-position: 20% 50%;
@@ -481,10 +490,10 @@ center{
 		width: 100%;
 	}
 	.large_content h1{
-		font-size: 59px;
+		font-size: 12.125vw !important;
 		// width: 94vw;
-		padding-top: 20vh;
-		padding-bottom: 5vh;
+		padding-top: 15vh;
+		padding-bottom: 2.6vw;
 		margin: auto;
 		margin-bottom: 5vh;
 		padding-left: 10vw;
@@ -493,7 +502,7 @@ center{
 	.large_content p{
 		max-width: 35%;
 		width: 100vw;
-		font-size: 23px;
+		font-size: 4.5vw;
 		font-family: Lato;
 		margin: 0;
 		padding: 0;
@@ -532,6 +541,23 @@ center{
 	}
 	#body{
 		height: 130vh;
+	}
+	.side{
+		font-size: 8vw !important;
+	}
+	.fa-times{
+		font-size: 5.6vw !important;
+	}
+	.sidepopup{
+		width: 100vw !important;
+		padding: 10vw !important;
+		font-size: 8vw !important;
+	}
+	.sidepopup .item, .side .item{
+		font-size: 8vw !important;
+	}
+	.item{
+		margin-bottom: 10vw !important;
 	}
 }
 @media screen and (max-width: 667px){
@@ -1125,6 +1151,7 @@ ul.tutors li img{
 	left: 0;
 	text-align: center;
 	z-index: 9;
+	font-family: Montserrat !important;
 }
 .fa-bars{
 	margin-left: 20px;
@@ -1151,7 +1178,7 @@ ul.tutors li img{
 	font-weight: bold;
 	font-size: 2.60417vw;
 	list-style: none;
-	margin-bottom: 2.60417vw;
+	margin-bottom: 2.90417vw;
 	position: relative;
 	display: inline-block;
 }
@@ -1176,13 +1203,15 @@ ul.tutors li img{
 }
 .item a{
 	color: rgba(255,255,255,1);
-	font-family: "Cabin";
+	font-family: "Montserrat";
+	font-weight: 600;
 	text-decoration: none;
 	letter-spacing: 0em;
 }
 .brand{
 	color: rgba(50, 168, 141, 1);
-	font-family: "Cabin";
+	font-family: "Montserrat";
+	font-weight: 600;
 	text-decoration: none;
 	letter-spacing: 0;
 	font-size: 50px;
@@ -1217,4 +1246,12 @@ a{
 #editprofile{
 	color: white;
 	text-decoration: underline;
+}
+input[type="checkbox"]{
+	transform: scale(0.9);
+	background: black !important;
+}
+input[type="checkbox"]:focus{
+	outline-color: transparent !important;
+	box-shadow: none !important;
 }
