--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -11,13 +11,18 @@
   		height: 120vh;
   	}
   }
+  @media screen and (max-width: 600px){
+  	.large_content{
+  		height: 130vh;
+  	}
+  }
 </style>
 </head>
 <body id="body">
   	<%= render 'layouts/header' %>
 
 		<div class="large_content">
-		<div class="container" style="margin-top: -30px">
+		<div class="container">
 			<h1>About Us</h1>
 			<p id="homep">This website serves to match a tutor with a tutee. We do not take responsibility for any issues
 			that occur as a result of using this website.
