--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -469,6 +469,9 @@ center{
 	#bg-dark{
 		background-color: #343A40 !important;
 	}
+	body{
+		max-height: 100vh !important;
+	}
 	.large_content{
 		width: 100vw;
 		padding-top: 0px;
@@ -490,7 +493,7 @@ center{
 		width: 100%;
 	}
 	.large_content h1{
-		font-size: 12.125vw !important;
+		font-size: 12.725vw !important;
 		// width: 94vw;
 		padding-top: 15vh;
 		padding-bottom: 2.6vw;
@@ -566,6 +569,98 @@ center{
 	}
 	#studygroups_link{
 		display: none;
+	}
+	#animatedbutton{
+		transform: scale(0.9);
+	}
+	#createsubjectbutton{
+		padding: 3vw !important;
+		font-size: 3vw !important;
+		margin-top: 0 !important;
+		margin-bottom: 2vw !important;
+		border-radius: 20px;
+	}
+	.studygroupdisplaycard, .tutordisplaycard{
+		width: 85vw !important;
+		max-width: 100vw !important;
+		height: 15vh !important;
+	}
+	.groupsize{
+		padding: 10px !important;
+		font-size: 50px !important;
+		height: 60% !important;
+	}
+	.tutorgrade{
+		height: 100% !important;
+		font-size: 55px !important;
+		padding: 10px !important;
+	}
+	.availablespots{
+		font-size: 3vw !important;
+		height: 40% !important;
+	}
+	.host{
+		width: 50% !important;
+		font-size: 4.5vw !important;
+		padding-top: 4vw;
+		text-transform: capitalize;
+	}
+	.tutorname{
+		width: 70% !important;
+		font-size: 4vw !important;
+	}
+	.location{
+		font-size: 15px !important;
+	}
+	.creatorname{
+		margin-bottom: 2vh !important;
+		font-size: 3vw !important;
+	}
+	.contact, .rate{
+		font-size: 3vw !important;
+	}
+	.studydate, .date{
+		font-size: 3vw !important;
+		// right: 10vw !important;
+	}
+	.loc-popup{
+	    position: absolute !important;
+	    left: 80% !important;
+	    top: 4% !important;
+	    color: black !important;
+	    background: transparent !important;
+	    padding: 1.5vw !important;
+	    max-width: 100% !important;
+	    width: 14vw !important;
+	    -webkit-transform: scaleY(1) !important;
+	    transform: scaleY(1) !important;
+	    -webkit-transition: -webkit-transform 0.3s;
+	    transition: -webkit-transform 0.3s;
+	    transition: transform 0.3s;
+	    transition: transform 0.3s, -webkit-transform 0.3s;
+	    font-size: 15px !important;
+	    display: inline-block !important;
+	}
+	.fa-map-marker{
+		display: none !important;
+	}
+	.studygroupsendrequest{
+	    height: 112% !important;
+	    position: absolute !important;
+	    left: 41% !important; 
+	    top: 0px !important;
+	    width: 31vw !important;
+	    padding: 10px !important;
+	    -webkit-transition: 0.2s !important;
+	    transition: 0.2s !important;
+	    -webkit-transform-origin: 0% 50% !important;
+	    transform-origin: 0% 50% !important;
+	    -webkit-transform: scaleX(0) !important;
+	    transform: scaleX(0) !important;
+	    background: #E0EAFC !important;
+	    background: -webkit-gradient(linear, left top, right top, from(#CFDEF3), to(#E0EAFC)) !important;
+	    background: linear-gradient(to right, #CFDEF3, #E0EAFC) !important;
+	    font-size: 15px !important;
 	}
 }
 @media screen and (max-width: 667px){
@@ -943,7 +1038,7 @@ ul.tutors li img{
 	float: left;
 	padding-top: 1.566vw;
 	padding-left: 6%;
-	font-family: "Cabin";
+	font-family: "Lato";
 	text-transform: uppercase;
 	font-weight: 700px;
 	font-size: 1.8229vw;
@@ -1144,7 +1239,7 @@ ul.tutors li img{
 	width: 0;
 	background-color: rgba(0,0,0,1);
 	visibility: hidden;
-	transition: 0.2s ease-in-out;
+	transition: 0.1 ease-in-out;
 	position: absolute;
 	left: -25vw;
 	top: 0;
@@ -1156,7 +1251,7 @@ ul.tutors li img{
 	width: 30vw;
 	box-sizing: border-box;
 	visibility: visible;
-	transition: 0.2s linear;
+	transition: 0.1s ease-in-out;
 	left: 0;
 	text-align: center;
 	z-index: 9;
