--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -11,8 +11,8 @@
   	}
   }
   @media screen and (max-width: 600px){
-  	.large_content{
-  		height: 130vh;
+  	.large_content, body{
+  		height: 100vh !important;
   	}
   }
 </style>
