final responsive design complete

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,8 +9,8 @@
   <nav class="sidenav">
 		<i class="fa fa-bars fa-2x"></i>
 		<div class="side">
+			<i class="fa fa-times fa-2x nav-times"></i>
 			<div class="item_container">
-				<i class="fa fa-times fa-2x"></i>
 				<li class="item"><a href="/home">Home</a></li><br>
 				<li class="item"><a href="/about">About</a></li><br>
 				<li class="item"><a href="/help">Help</a></li><br>
