--- a/app/views/subject/findresults.html.erb
+++ b/app/views/subject/findresults.html.erb
@@ -13,7 +13,7 @@
 	<div class="large_content">
 		<div class="container">
 			<h1 id="homeh1">Available tutors for <br><%= params[:searchName] %></h1>
-			<p id="homep"></p>		
+			<p id="homep">Click on a card to request tutoring</p>		
 		</div>
 			
  	</div>
@@ -55,16 +55,18 @@
                   				Rate: <%= subjuctivo.rate %>
                   			</div>
                   		<% end %>
-          
-                      <div class="tutorsendrequest">
-                            <%= form_tag(request_path(name: Person.find_by(id: subjuctivo.creatorid).email, whichSubject: subjuctivo.name, time: subjuctivo.date), method: :post) do %> <!-- params[:name] is for the tutor's email I just have too much to do rn to change the attribute name -->
-                              <div><p></p></div>
-                     	       <h4 class="findatutor_heading">Send request to tutor: </h4>
-                     	       <input type="text" name="email" id="email" placeholder="Enter your email" class = "form-control"><br>
-                     	        <input type="text" name="student" id="student" placeholder="Your name"  class = "form-control"><br> 
-                              <input type="submit" name="commit" value="Send" data-disable-with="Send" id="specialanimatedbutton">
-                            <% end %>
-                      </div>
+                    <div class="request_container nodisplay">
+                          <div class="tutorsendrequest">
+                                <%= form_tag(request_path(name: Person.find_by(id: subjuctivo.creatorid).email, whichSubject: subjuctivo.name, time: subjuctivo.date), method: :post) do %> <!-- params[:name] is for the tutor's email I just have too much to do rn to change the attribute name -->
+                                  <div><p></p></div>
+                         	       <h4 class="findatutor_heading">Send request to tutor: </h4>
+                         	       <input type="text" name="email" id="email" placeholder="Enter your email" class = "form-control"><br>
+                         	        <input type="text" name="student" id="student" placeholder="Your name"  class = "form-control"><br> 
+                                  <input type="submit" name="commit" value="Send" data-disable-with="Send" id="specialanimatedbutton">
+                                <% end %>
+                                <i class="fa fa-times req-times"></i>
+                          </div>
+                    </div>
                       <div><p></p></div>
             </div>
           <% end %>
