--- a/app/views/subject/new.html.erb
+++ b/app/views/subject/new.html.erb
@@ -4,49 +4,7 @@
 	
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <!--<nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">-->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-        	<a class="nav-link" href="/about">About</a>
-        </li>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/help">Help</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/studygroup">Study Group</a>
-        </li>
-        
-        <!--<li class="nav-item">-->
-        <div class="dropdown">
-            <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Account
-            </button>
-          <ul class="dropdown-menu">
-            
-            <% if Person.find_by(id: session[:tutor_id]).admin? %>
-              <li class = "dropdown-item"><%= link_to "Profile", adminPage_path %></li>
-            <% else %>
-              <li class = "dropdown-item"><%= link_to "Profile", person_path(Person.find_by(id: session[:tutor_id])) %></li>
-            <% end %>
-            
-            <li class="divider"></li>
-            <li>
-              <%= link_to "Log out", logout_path, method: :delete %>
-            </li>
-          </ul>
-      </ul>
-      </nav>
-      <a class="navbar-brand" href="/home">CV Enterprises</a>
-    </div>
-      </ul>
-    </div>
-</nav>
+ <%= render "layouts/header" %>
 <!--<h1 id="martin"><div style="background-color:lightgrey; opacity: 0.96; text-align:left; vertical-align: middle; padding:15px 15px; margin: 1% 83% 0% -1%; border-radius:25px;"> Create a subject</h1></div>-->
 
 <div class="large_content" id="createsubjectlargecontent">
